--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ddf3ef;
 }
 
 code {
